<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.expenseapp.MainActivity"
    android:orientation="vertical">


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddExpenseTag"
        android:id="@+id/buttonAddExpense"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLblEditExpense"
        android:id="@+id/buttonEditExpense"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnDeleteTag"
        android:id="@+id/buttonDeleteExpense"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnShowExpenseTag"
        android:id="@+id/buttonShowExpence"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnFinishedTag"
        android:id="@+id/buttonFinish"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp" />

</LinearLayout>
